# bumble-bleak

./: .gitignore  LICENSE  README.md  pyproject.toml
bumble_bleak/: __init__.py  _backend.py  characteristic.py  client.py  device.py  exc.py  pairing.py  scanner.py  shadow.py  uuids.py
bumble_bleak/_shadow/bleak/: __init__.py  exc.py  uuids.py
bumble_bleak/_shadow/bleak/backends/: characteristic.py  device.py  scanner.py  service.py
bumble_bleak/_shadow/bleak/backends/bluezdbus/: agent.py
bumble_bleak/_shadow/bleak_retry_connector/: __init__.py
docs/: adapter-sharing.md  adapters-and-reenumeration.md
examples/: aiobmsble_ant.py  aiobmsble_plain.py  spike.py
tests/: test_integration.py  test_pairing.py  test_shadow.py  test_unit.py
